# binfmt-dispatcher

./: .packit.yml  Cargo.toml  Makefile  README.md
data/: binfmt-dispatcher.toml  org.AsahiLinux.BinfmtDispatcher.policy  org.AsahiLinux.binfmt_dispatcher.policy
src/: config.rs  main.rs  util.rs
