[package]
name = "binfmt-dispatcher"
version = "0.1.0"
authors = ["Davide Cavalca <davide@cavalca.name>"]
edition = "2021"
description = "Smart dispatcher for binfmt-misc"
repository = "https://github.com/davide125/binfmt-dispatcher"
license = "MIT"

[dependencies]
anyhow = "1.0"
config = "0.13"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
nix = "0.29"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.5"
